# LIF

./: CMakeLists.txt  README.md
data/: accuracy.csv  nodes_values.csv  nodes_values_true.csv
include/: csv_utils.h
src/: csv_utils.c  main.c
utils/: valuegen.py
visualization/: accuracy_plot.py  requirements.txt
